--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
-spring.datasource.url=jdbc:mysql://ux4vfzjn7fjj7gzc:zPa5oD8FQHJ8EIFejz1G@b9p6eych9hlcpvdbc4lj-mysql.services.clever-cloud.com:3306/b9p6eych9hlcpvdbc4lj?useSSL=false&Timezone_UTC
-spring.datasource.username=ux4vfzjn7fjj7gzc
-spring.datasource.password=zPa5oD8FQHJ8EIFejz1G
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=3306
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql: true
+
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.hikari.maximum-pool-size=2
+spring.json.serialize.fail-on-empty=false
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+jwt.secret = ebe046886ff607c0ed81a61ac21138ba
+#jwt.expiration=20000
+
+
+#spring.datasource.hikari.maximum-pool-size=2
