--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,10 @@
 # flyctl launch added from .gitignore
 **\HELP.md
+target/
+**\.mvn\wrapper\maven-wrapper.jar
+**\**\src\main\**\target
+**\**\src\test\**\target
+
 #target/
 !**\.mvn\wrapper\maven-wrapper.jar
 !**\**\src\main\**\target
