--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
             <artifactId>mysql-connector-j</artifactId>
 	  
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>	  
-        </dependency>
+        </dependency>-->
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
