--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,13 @@
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-	  
+            <artifactId>mysql-connector-j</artifactId>  
         </dependency>
-<!--        <dependency>
+        
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>	  
-        </dependency>-->
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
