--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3306
-spring.datasource.url=jdbc:mysql://ux4vfzjn7fjj7gzc:zPa5oD8FQHJ8EIFejz1G@b9p6eych9hlcpvdbc4lj-mysql.services.clever-cloud.com:3306/b9p6eych9hlcpvdbc4lj?useSSL=false&Timezone_UTC
+spring.datasource.url=jdbc:mysql://ux4vfzjn7fjj7gzc:zPa5oD8FQHJ8EIFejz1G@b9p6eych9hlcpvdbc4lj-mysql.services.clever-cloud.com:3306/b9p6eych9hlcpvdbc4lj?useSSL=false
 spring.datasource.username=ux4vfzjn7fjj7gzc
 spring.datasource.password=zPa5oD8FQHJ8EIFejz1G
 
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.json.serialize.fail-on-empty=false
 
 #spring.servlet.multipart.max-file-size=10MB
