--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,28 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&Timezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#original listo
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&Timezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
 
+# cambios nuevos
+spring.datasource.url=jdbc:mysql://ux4vfzjn7fjj7gzc:zPa5oD8FQHJ8EIFejz1G@b9p6eych9hlcpvdbc4lj-mysql.services.clever-cloud.com:3306/b9p6eych9hlcpvdbc4lj?useSSL=false
+spring.datasource.username=ux4vfzjn7fjj7gzc
+spring.datasource.password=zPa5oD8FQHJ8EIFejz1G
+
+spring.jpa.show-sql: true
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.json.serialize.fail-on-empty=false
+
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+
+jwt.secret = ebe046886ff607c0ed81a61ac21138ba
+#jwt.jwtExpirationMs= 3600000
+#jwt.jwtRefreshExpirationMs= 86400000
